test: rename tests to better match what they actually verify
Signed-off-by: Joachim Wiberg <troglobit@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,9 +3,9 @@ EXEC   := client server
 all: $(EXEC)
 
 check: all
-	unshare -mrun ./tcp.sh
-	unshare -mrun ./udp.sh
-	unshare -mrun ./ipv6.sh
+	unshare -mrun ./accept.sh
+	unshare -mrun ./recvfrom.sh
+	unshare -mrun ./accept6.sh
 
 clean:
 	$(RM) $(EXEC) *.o
