test: add support for testing recvmsg() wrapper (not available yet)
Signed-off-by: Joachim Wiberg <troglobit@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,5 @@
 EXEC   := client server
-TESTS  := accept.sh accept6.sh recvfrom.sh
+TESTS  := accept.sh accept6.sh recvfrom.sh recvmsg.sh
 
 all: $(EXEC)
 
