test: enable CFLAGS for client/server helpers
Signed-off-by: Joachim Wiberg <troglobit@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,5 @@
 EXEC   := client server
+CFLAGS := -W -Wall -Wextra -std=gnu99 -g -O2
 TESTS  := accept.sh accept6.sh recvfrom.sh recvmsg.sh
 
 all: $(EXEC)
