Add test case for IPv4 addresses mapped on IPv6
Signed-off-by: Jacques de Laval <Jacques.De.Laval@westermo.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,6 @@
 EXEC   := client server
 CFLAGS := -W -Wall -Wextra -std=gnu99 -g -O2
-TESTS  := accept.sh accept6.sh recvfrom.sh recvmsg.sh
+TESTS  := accept.sh accept6.sh accept6-ipv4-mapped.sh recvfrom.sh recvmsg.sh
 
 all: $(EXEC)
 
